--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 <br>
                 <div class="row">
                     <div class="col-md-12">
-                        <a href="http://www.github.com" target="_blank" title="View source on GitHub"><i class="fa fa-github fa-2x"></i></a>
-                        <a href="http://www.github.com" target="_blank" title="More information"><i class="fa fa-gears fa-2x"></i></a>
+                        <a href="https://github.com/joeyjoeuk/synonymouse" target="_blank" title="View source on GitHub"><i class="fa fa-github fa-2x"></i></a>
+                        <a href="http://www.joemaidman.com/?portfolio=synonymouse" target="_blank" title="More information"><i class="fa fa-gears fa-2x"></i></a>
                         <br>
                         <br>
                     </div>
