--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                         <a href="http://www.joemaidman.com/?portfolio=synonymouse" target="_blank" title="More information"><i class="fa fa-gears fa-2x"></i></a>
                         <br>
                         <br>
+                        <h7>Thesaurus service provided by words.bighugelabs.com</h7>
+                        <br>
+                        <br>
                     </div>
                 </div>
             </div>
